--- a/flex_basics.Rmd
+++ b/flex_basics.Rmd
@@ -24,7 +24,7 @@ load("current_image.Rdata")
 ```
 
 
-```{r, echo = F, eval = FALSE , message = F, warning = F}
+```{r, echo = F, eval = TRUE , message = F, warning = F}
 xaringanExtra::use_share_again()
 ```
 
@@ -32,12 +32,47 @@ xaringanExtra::use_share_again()
 ```{r the_chunk, include = F}
 gapminder::gapminder %>% 
   filter(year == 2002) %>% 
-  head() %>% 
+  head() %>%
+  select(year, continent, everything()) %>% 
   flextable() %>% 
-  merge_v(j = c("country", "continent") ) %>% 
-  set_header_labels(country = "The Country" ) %>% 
+  theme_box() %>% 
+  merge_v(j = c("year", "country", "continent") ) %>% 
+  set_header_labels(country = "The Country Name", 
+                    year = "Year", 
+                    continent = "",
+                    pop = "Population") %>% 
   autofit() %>% 
-  theme_vader()
+  bg(bg = "grey95", part = "body") %>% 
+  bg(bg = "steelblue", part = "header") %>% 
+  color(color = "oldlace", part = "header") %>% 
+  font(fontname = "Times") %>% 
+  bg(bg = "grey70", j = 6) %>% 
+  bg(bg = "goldenrod2", j = 1) %>% 
+  rotate(j = 1:4, rotation="btlr", part = "header") %>% 
+  rotate(j = 3, rotation="lrtb", part = "header") %>% 
+  rotate(i = 3, j = 2, rotation="btlr", part = "body") %>% 
+  rotate(j = 1, rotation="btlr", part = "body") %>%
+  # conditional formatting
+  color(i = ~ lifeExp > 75, 
+        j = ~ country + lifeExp, 
+        color = "goldenrod4") %>% 
+  bold(j = c("year", "gdpPercap"), 
+       bold = TRUE) %>% 
+  align(align = "center", part = "all" ) %>% 
+  fontsize(j = "continent", size = 14) %>% 
+  fontsize(j = "year", size = 20) %>% 
+  color(j = 1, color = "steelblue", part = "body") %>% 
+  line_spacing(space = 3, part = "header") %>% 
+  vline(border = fp_border(color="goldenrod3", 
+                           style = "dashed"), 
+        part = "all" ) %>% 
+  hline_bottom(border = 
+                  fp_border(color="steelblue", 
+                            style = "solid", width = 5), 
+               part = "body" ) %>% 
+  hline(i = 5, border = fp_border(color = "plum4", width = 4)) %>% 
+  hline_top(border = fp_border(color="goldenrod3", width = 3), 
+            part = "all")
 ```
 
 `r chunk_reveal(chunk_name = "the_chunk", break_type = "auto", ...)`
@@ -45,7 +80,7 @@ gapminder::gapminder %>%
 
 
 ```{css, eval = TRUE, echo = FALSE}
-.remark-code{line-height: 1.5; font-size: 200%}
+.remark-code{line-height: 1.5; font-size: 80%}
 
 @media print {
   .has-continuation {
