--- a/flex_custom_theme.Rmd
+++ b/flex_custom_theme.Rmd
@@ -35,13 +35,19 @@ gapminder::gapminder %>%
   head() %>% 
   flextable() %>% 
   theme_vanilla() %>% 
-  color(color = "black", part = "all") %>% 
-  bg(bg = "transparent", part = "all") %>% 
+  color(color = "steelblue", 
+        part = "all") %>% 
+  bg(bg = "transparent", 
+     part = "all") %>% 
   italic(j = 1) %>% 
-  bg(bg = "#C90000", part = "header") %>% 
-  color(color = "white", part = "header") %>% 
-  color(~ year > 3.5, ~ year, color = "red") %>% 
-  bold(~ year > 3.5, ~ year, bold = TRUE) %>% 
+  bg(bg = "#C90000", 
+     part = "header") %>% 
+  color(color = "white", 
+        part = "header") %>%
+  color(~ year > 3.5, ~ year, 
+        color = "red") %>% 
+  bold(~ year > 3.5, ~ year, 
+       bold = TRUE) %>% 
   autofit()
 ```
 
