--- a/flex_theme.Rmd
+++ b/flex_theme.Rmd
@@ -34,17 +34,10 @@ gapminder::gapminder %>%
   filter(year == 2002) %>% 
   head() %>% 
   flextable() %>%
-  theme_alafoli() %>% #ROTATE
-  theme_booktabs() %>% #ROTATE
-  theme_box() %>% #ROTATE
-  theme_tron() %>% #ROTATE
-  theme_tron_legacy() %>% #ROTATE
-  theme_vader() %>% #ROTATE
-  theme_vanilla() %>% #ROTATE
-  theme_zebra() #ROTATE
+  theme_tron_legacy() 
 ```
 
-`r chunk_reveal(chunk_name = "the_chunk", break_type = "rotate", ...)`
+`r chunk_reveal(chunk_name = "the_chunk", break_type = "replace", ...)`
 
 
 
