--- a/margins_table_tidy.Rmd
+++ b/margins_table_tidy.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "flex detail"
+title: "### using tidyverse 'verbs' to create pop count by continent in 2002 with percentages and totals"
 subtitle: ""
 author: ""
 output:
@@ -24,27 +24,29 @@ load("current_image.Rdata")
 ```
 
 
-```{r, echo = F, eval = TRUE , message = F, warning = F}
+```{r, echo = F, eval = FALSE , message = F, warning = F}
 xaringanExtra::use_share_again()
 ```
 
 
 ```{r the_chunk, include = F}
-myft <- iris[c(1:3, 51:53, 101:104),]
-myft <- flextable(
-  data = myft, 
-  col_keys = c("Species", "col_1", 
-               "Sepal.Length", "Petal.Length") )
-myft <- theme_vanilla(myft)
-myft <- autofit(myft)
-myft <- empty_blanks(myft)
-
-# reset and build
-myft <- head(iris)
-myft <- flextable(myft) 
-myft <- set_header_labels(myft, Sepal.Length = "Sepal length", 
-    Sepal.Width = "Sepal width", Petal.Length = "Petal length",
-    Petal.Width = "Petal width" )
+gapminder::gapminder %>% 
+  filter(year == 2002) %>% 
+  group_by(continent) %>% 
+  summarise(population = sum(pop)) %>% 
+  mutate(percent = 100 * round(prop.table(population), 3) ) ->
+base
+  
+base %>% 
+  summarise(percent = sum(percent), 
+            population = sum(population),
+            continent = "Totals") ->
+totals
+bind_rows(base, totals) %>% 
+  mutate(`Population (millions)` = population/1000000) %>% 
+  mutate(percent = round(percent, 2)) %>% 
+  rename(` ` = continent) %>% 
+  select(` `, `Population (millions)`, percent)
 ```
 
 `r chunk_reveal(chunk_name = "the_chunk", break_type = "auto", ...)`
