--- a/named_colors_greys.Rmd
+++ b/named_colors_greys.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "flex detail"
+title: "named colors_greys"
 subtitle: ""
 author: ""
 output:
@@ -30,21 +30,30 @@ xaringanExtra::use_share_again()
 
 
 ```{r the_chunk, include = F}
-myft <- iris[c(1:3, 51:53, 101:104),]
-myft <- flextable(
-  data = myft, 
-  col_keys = c("Species", "col_1", 
-               "Sepal.Length", "Petal.Length") )
-myft <- theme_vanilla(myft)
-myft <- autofit(myft)
-myft <- empty_blanks(myft)
+num_columns <- 12
+num_colors <- length(grays)
+start_color <- 1
+end_color <- start_color + num_colors - 1
+the_colors <- grays[start_color:end_color]
 
-# reset and build
-myft <- head(iris)
-myft <- flextable(myft) 
-myft <- set_header_labels(myft, Sepal.Length = "Sepal length", 
-    Sepal.Width = "Sepal width", Petal.Length = "Petal length",
-    Petal.Width = "Petal width" )
+
+the_colors %>% 
+  matrix(ncol = num_columns, byrow = F, ) %>% 
+  as_tibble() %>% 
+  mutate_at(.vars = 1:num_columns, 
+            funs(factor(., 
+                        levels = rev(the_colors), 
+                        ordered = T))) %>% 
+  gt::gt() %>% 
+  gt::data_color(columns = 1:num_columns,
+                 colors = scales::col_factor(
+                   palette = the_colors,
+                   domain = NULL,
+                   reverse = TRUE)
+                 ) %>%
+  gt::tab_options(
+    column_labels.hidden = TRUE
+  )
 ```
 
 `r chunk_reveal(chunk_name = "the_chunk", break_type = "auto", ...)`
